# syrup-standardpaths

./: CMakeLists.txt
include/syrup/: features.h  standardpaths.h
src/: CMakeLists.txt  features.c  standardpaths.c  standardpaths.m  standardpaths_osx.h
